# FileShare

./: .gitignore  Cargo.toml  Config.toml  LICENSE  README.md  build.rs
frontend/: .env.development  .env.production  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/locales/: cat.json  en.json  zh.json
src/: main.rs
